--- a/config.example.json
+++ b/config.example.json
@@ -7,5 +7,8 @@
     "db": "tg"
   },
   "TDataDir": ".tdlib",
+  "Vosk": {
+    "Model": "/opt/vosk-models/vosk-model-small-ru-0.22"
+  },
   "Debug": false
 }
